force-app/main/default/objects/Order_Line__c/Order_Line__c.object-meta.xml
<CustomObject>
    <description>Individual items within an order</description>
    <label>Order Line</label>
    <nameField>
        <label>Order Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>