force-app/main/default/objects/Order_Line__c/fields/Menu_Item__c.field-meta.xml
<CustomField>
    <fullName>Menu_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Item</label>
    <referenceTo>Menu_Item__c</referenceTo>
    <relationshipLabel>Order Lines</relationshipLabel>
    <relationshipName>Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>