force-app/main/default/objects/Order_Line__c/fields/Special_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Instructions__c</fullName>
    <label>Special Instructions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>